# group-seed-sid

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: main.yml
src/: App.css  App.tsx
src/components/: LotteryForm.tsx  NumericalInput.tsx  ProgressBar.tsx  ResultTable.tsx  SidSearchForm.tsx
src/wasm/: CMakeLists.txt  Makefile  load.tsx
src/wasm/src/: lib.cpp
src/workers/: SidSearchWorker.js
